apps/mealie/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/weight: "40"
    gethomepage.dev/name: Mealie
    gethomepage.dev/description: Recipes and meal planning
    gethomepage.dev/icon: mdi-silverware-fork-knife
    gethomepage.dev/href: "https://mealie.net.ecksd.ee"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=mealie
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - mealie.net.ecksd.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 9000
